# mermaid-states

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  grammar.bnf  grammar.py  load.aider  regex.md
c/: Makefile  state_machine.c  state_machine.h  test_state_machine.c
c++/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  state_machine_test
c++/include/: state_machine.hpp
c++/test/: state_machine_test.cpp
c/include/: state_machine.h
c/src/: state_machine.c
c/test/: state_machine_test.c
cpp/: Makefile  state_machine.hpp  state_machine.inl  test_state_machine.cpp
go/: Makefile  go.mod  state-gen.go  test.sh
go/claude-sonnet/: main.go  statemachine.go
go/cmd/: Makefile
go/cmd/parse/: Makefile  main.go  test-md.sh  test.sh
go/internal/: Makefile
go/internal/graph/: Makefile  graph.go  graph_test.go
go/internal/parser/: Makefile  parser.go  parser_test.go
go/internal/statemachine/: execute_test.go  setup_test.go  statemachine.go
go/llama-405b/: llama-405b.go  main.go
go/pkg/: Makefile
go/pkg/statemachine/: Makefile  execute_test.go  setup_test.go  statemachine.go
go/state-gen/: state-gen.go  state-gen_test.go  test-md.sh
go/statemachine/: setup_test.go  statemachine.go
python/: state-gen.py  test-md.sh  test.sh
test/: graph.txt  graph2.txt  graph3.txt  input.txt  output.txt  s1.md  t1.md  t2.md  t3.md  tests.json
